# MiniADAS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.json
data/detection/: sample_det.csv
data/gt/: sample_gt.csv
docs/: daily-log.md  design.md  requirement.md  schedule.md
include/core/: BBox.hpp  FrameData.hpp  MatchResult.hpp  ObjectInfo.hpp
include/matcher/: ObjectMatcher.hpp
include/parser/: DetectionParser.hpp  GTParser.hpp
src/: main.cpp
src/matcher/: ObjectMatcher.cpp
src/parser/: DetectionParser.cpp  GTParser.cpp
